testsuite/poke.pkl/cast-struct-diag-2.pk
/* { dg-do compile } */

defvar x = struct {} as int<32>; /* { dg-error "not allowed" } */
